v1_headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-h
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  clusterIP: None # providing None establishes this service as a Headless Service
